package com.debttrack.platfrom.enums;

public enum DebtStatus {
    ACTIVE, CLOSED
}
