package com.debttrack.platfrom.enums;

public enum NotificationStatus {
    PENDING, SENT
}