package com.debttrack.platfrom.enums;

public enum Role {
    USER, ADMIN
}
